use/installing-ed-platform/release-6.0.0/build.md
# Build

### Overview <a href="#overview" id="overview"></a>

To install SunbirdED `release-6.0.0`, we will need to run many Jenkins jobs and a couple of manual steps. Some of the jobs need to be run in a specific order. This page details out the list of jobs, their order and the github release tags to be used for each job.

**Create Plugin Containers / Folder Structure**

* We will create few folders in object storage for storing sunbird plugins
* Our deployment jobCore Release TagCore Release Tag always tries to delete the folder first before uploading, so we need to have the placeholders before running the jobs
* Create a public object storage with the name you have set for the variable `cloud_storage_content_bucketname`&#x20;
* Under `cloud_storage_content_bucketname` create folders with below names.
  * collection-editor
  * generic-editor
  * content-editor
  * v3/preview (under v3 folder create preview folder)
* Upload the default T\&C file to `cloud_storage_content_bucketname` in a folder named **terms-and-conditions**. You can get a copy of the sample T\&C file from [here](https://sunbirdpublic.blob.core.windows.net/installation/terms-and-conditions/terms-and-conditions-v9.html). You are free to edit the HTML as per your requirements
* Create another object store with the name you have set for the variable `cloud_storage_label_bucketname`
* Go to cloned sunbird-devops repo and navigate to `cd sunbird-devops/utils/portal` and upload all files to `cloud_storage_label_bucketname`

**Upload Initial Plugins**

* Upload the initial set of plugins to `cloud_storage_content_bucketname` container
* Download the initial Plugins from [here](https://sunbirdpublic.blob.core.windows.net/installation/content-plugins.zip)
* Unzip **content-plugins.zip** and upload all the files and folders to `cloud_storage_content_bucketname/content-plugins` object storage
* Create a object storage with name you have set for the variable `cloud_storage_public_bucketname` with public access level
* Create a object storage with name you have set for the variable `cloud_storage_artifacts_bucketname` with private access level

**Upload Maxmind Database to Object storage**

* Download the Maxmind city database in zip format from Maxmind website
* Upload the zip file to the `cloud_storage_artifacts_bucketname` object storage

**Build source code**

> **Note**:
>
> * Jenkins will have many jobs which may not be documented or is not suitable for adoption yet
> * Jobs listed on this page is sufficient to setup Sunbird and not every job present in Jenkins is required to be run
> * Jobs can be run in parallel to speed up execution. The only exception is you should **NOT** run multiple jobs which clone the code from same repo in parallel
> * If you get errors in some of the build jobs, rerun the job again
> * The errors are usually due to missing maven jars or maven repo timeouts
> * If you get errors even after re-running the job, come back to it later, there are other jobs which would generate dependent jars

<table><thead><tr><th width="220">JENKINS JOB TO RUN</th><th>GITHUB TAG</th><th>GITHUB REPO</th><th>COMMENTS</th></tr></thead><tbody><tr><td>Build/Core/AdminUtils</td><td>release-4.5.0_RC3</td><td><a href="https://github.com/project-sunbird/sunbird-apimanager-util.git">https://github.com/project-sunbird/sunbird-apimanager-util.git</a></td><td>Handles mobile device registration, refresh token</td></tr><tr><td>Build/Core/Analytics</td><td>github_release_tag:  release-5.1.2_RC1,<strong>cloud_store_group_id</strong>:org.sunbird,<strong>cloud_store_artifact_id</strong>:cloud-store-sdk_2.12,<strong>cloud_store_version</strong>:1.4.0</td><td><a href="https://github.com/project-sunbird/sunbird-analytics-service.git">https://github.com/project-sunbird/sunbird-analytics-service.git</a></td><td>Location Register, Location Retrieval</td></tr><tr><td>Build/Core/APIManager</td><td>release-4.10.0_RC1</td><td><a href="https://github.com/project-sunbird/sunbird-devops.git">https://github.com/project-sunbird/sunbird-devops.git</a></td><td>The API Gateway</td></tr><tr><td>Build/Core/ApiManagerEcho</td><td>master-RC1</td><td><a href="https://github.com/project-sunbird/sunbird-echo-service.git">https://github.com/project-sunbird/sunbird-echo-service.git</a></td><td>Simply echos the request</td></tr><tr><td>Build/Core/Assessment</td><td>inquiry_release_tag:release-5.6.0_RC1,core_release_tag:release-5.2.0_RC2</td><td><a href="https://github.com/project-sunbird/knowledge-platform.git">https://github.com/project-sunbird/knowledge-platform.git</a></td><td>Handles course assessments</td></tr><tr><td>Build/Core/Bot</td><td>release-3.9.0_RC1</td><td><a href="https://github.com/project-sunbird/sunbird-bot.git">https://github.com/project-sunbird/sunbird-bot.git</a></td><td>Frontend for the chatbot</td></tr><tr><td>Build/Core/Cassandra</td><td>release-4.10.0_RC1</td><td><a href="https://github.com/project-sunbird/sunbird-utils.git">https://github.com/project-sunbird/sunbird-utils.git</a></td><td>Handles the Cassandra database schema</td></tr><tr><td>Build/Core/CassandraTrigger</td><td>release-4.6.0_RC1</td><td><a href="https://github.com/project-sunbird/sunbird-utils.git">https://github.com/project-sunbird/sunbird-utils.git</a></td><td>Creates few Cassandra Triggers</td></tr><tr><td>Build/Core/Cert</td><td>release-5.0.0_RC2</td><td><a href="https://github.com/project-sunbird/cert-service.git">https://github.com/project-sunbird/cert-service.git</a></td><td>Handles course certificates</td></tr><tr><td>Build/Core/CertRegistryService</td><td>release-5.0.0_RC1</td><td><a href="https://github.com/project-sunbird/certificate-registry.git">https://github.com/project-sunbird/certificate-registry.git</a></td><td>Helper for Certificate service</td></tr><tr><td>Build/Core/Content</td><td>github_release_tag: release-5.5.0_RC1,<strong>cloud_store_group_id</strong>:org.sunbird,<strong>cloud_store_artifact_id</strong>:cloud-store-sdk,<strong>cloud_store_version</strong>:1.4.6</td><td><a href="https://github.com/project-sunbird/knowledge-platform.git">https://github.com/project-sunbird/knowledge-platform.git</a></td><td>Handles the Contents and Content Metadata</td></tr><tr><td></td><td></td><td></td><td></td></tr><tr><td>Build/Core/Dial</td><td>release-5.2.0_RC1</td><td><a href="https://github.com/project-sunbird/sunbird-dial-service.git">https://github.com/project-sunbird/sunbird-dial-service.git</a></td><td>Handles QR code generation</td></tr><tr><td>Build/Core/DiscussionsMiddleware</td><td>release-5.0.0_RC2</td><td><a href="https://github.com/Sunbird-Ed/discussions-middleware.git">https://github.com/Sunbird-Ed/discussions-middleware.git</a></td><td>Middleware for discussion forum</td></tr><tr><td>Build/Core/EncService</td><td>release-3.8.0_RC1</td><td><a href="https://github.com/project-sunbird/enc-service">https://github.com/project-sunbird/enc-service</a></td><td>Encryption service to setup certificate signing keys</td></tr><tr><td>Build/Core/Groups</td><td>release-5.0.0_RC2</td><td><a href="https://github.com/project-sunbird/groups-service.git">https://github.com/project-sunbird/groups-service.git</a></td><td>Handles groups functions</td></tr><tr><td>Build/Core/Keycloak</td><td>release-3.8.0_RC1</td><td><a href="https://github.com/project-sunbird/sunbird-auth.git">https://github.com/project-sunbird/sunbird-auth.git</a></td><td>User authentication service</td></tr><tr><td>Build/Core/KnowledgeMW</td><td>release-5.2.0_RC1</td><td><a href="https://github.com/project-sunbird/knowledge-mw-service.git">https://github.com/project-sunbird/knowledge-mw-service.git</a></td><td>Middleware for Content service</td></tr><tr><td>Build/Core/Learner</td><td>github_release_tag: release-5.3.1_RC1,<strong>cloud_store_group_id</strong>:org.sunbird,<strong>cloud_store_artifact_id</strong>:cloud-store-sdk,<strong>cloud_store_version</strong>:1.4.6</td><td><a href="https://github.com/project-sunbird/sunbird-lms-service.git">https://github.com/project-sunbird/sunbird-lms-service.git</a></td><td>Handles user and organizations</td></tr><tr><td>Build/Core/Lms</td><td>github_release_tag: release-5.3.2_RC1,<strong>cloud_store_group_id</strong>:org.sunbird,<strong>cloud_store_artifact_id</strong>:cloud-store-sdk,<strong>cloud_store_version</strong>:1.4.6</td><td><a href="https://github.com/project-sunbird/sunbird-course-service.git">https://github.com/project-sunbird/sunbird-course-service.git</a></td><td>Handles courses</td></tr><tr><td>Build/Core/Nodebb</td><td>github_release_tag: release-5.0.0_RC1, nodebb_branch: v1.18.6</td><td><a href="https://github.com/project-sunbird/sunbird-nodebb.git">https://github.com/project-sunbird/sunbird-nodebb.git</a></td><td>Handles the discussion forum</td></tr><tr><td>Build/Core/Notification</td><td>release-5.0.0_RC2</td><td><a href="https://github.com/project-sunbird/sunbird-notification-service.git">https://github.com/project-sunbird/sunbird-notification-service.git</a></td><td>Handles notifications</td></tr><tr><td>Build/Core/Player</td><td>release-6.0.0_RC40</td><td><a href="https://github.com/Sunbird-Ed/SunbirdEd-portal.git">https://github.com/Sunbird-Ed/SunbirdEd-portal.git</a></td><td>Handles the UI elements</td></tr><tr><td>Build/Core/Print</td><td>release-3.8.0_RC1</td><td><a href="https://github.com/project-sunbird/print-service.git">https://github.com/project-sunbird/print-service.git</a></td><td>Handles PDF generation of certificates</td></tr><tr><td>Build/Core/Proxy</td><td>release-3.8.0_RC14</td><td><a href="https://github.com/project-sunbird/sunbird-devops.git">https://github.com/project-sunbird/sunbird-devops.git</a></td><td>Nginx web server / proxy</td></tr><tr><td>Build/Core/Report</td><td>release-4.10.0_RC6</td><td><a href="https://github.com/project-sunbird/sunbird-report-service.git">https://github.com/project-sunbird/sunbird-report-service.git</a></td><td>Handles some of the reports</td></tr><tr><td>Build/Core/Router</td><td>release-3.9.0_RC1</td><td><a href="https://github.com/project-sunbird/sunbird-bot.git">https://github.com/project-sunbird/sunbird-bot.git</a></td><td>Backend for chatbot</td></tr><tr><td>Build/Core/Search</td><td>release-5.0.0_RC2</td><td><a href="https://github.com/project-sunbird/knowledge-platform.git">https://github.com/project-sunbird/knowledge-platform.git</a></td><td>Handles contents / course search</td></tr><tr><td>Build/Core/Taxonomy</td><td>release-5.2.0_RC3</td><td><a href="https://github.com/project-sunbird/knowledge-platform.git">https://github.com/project-sunbird/knowledge-platform.git</a></td><td>Handles the taxonomies</td></tr><tr><td>Build/Core/Telemetry</td><td>release-3.3.0_RC1</td><td><a href="https://github.com/project-sunbird/sunbird-telemetry-service.git">https://github.com/project-sunbird/sunbird-telemetry-service.git</a></td><td>Handles the telemetry generated</td></tr><tr><td>Build/KnowledgePlatform/CassandraTrigger</td><td>release-3.8.0_RC18</td><td><a href="https://github.com/project-sunbird/sunbird-learning-platform.git">https://github.com/project-sunbird/sunbird-learning-platform.git</a></td><td>Creates few Cassandra Triggers</td></tr><tr><td>Build/KnowledgePlatform/FlinkJobs</td><td>github_release_tag: release-5.5.0_RC2,<strong>cloud_store_group_id</strong>:org.sunbird,<strong>cloud_store_artifact_id</strong>:cloud-store-sdk_2.12,<strong>cloud_store_version</strong>:1.4.6</td><td><a href="https://github.com/project-sunbird/knowledge-platform-jobs.git">https://github.com/project-sunbird/knowledge-platform-jobs.git</a></td><td>Multiple functions like search indexing, video streaming</td></tr><tr><td>Build/KnowledgePlatform/InquiryFlinkJob</td><td>release-5.7.0_RC1</td><td><a href="https://github.com/Sunbird-inQuiry/data-pipeline.git">https://github.com/Sunbird-inQuiry/data-pipeline.git</a></td><td>Handles async question set</td></tr><tr><td>Build/KnowledgePlatform/Learning</td><td>github_release_tag: release-5.2.0_RC3, profile_id: platform-services</td><td><a href="https://github.com/project-sunbird/sunbird-learning-platform.git">https://github.com/project-sunbird/sunbird-learning-platform.git</a></td><td>Handles frameworks</td></tr><tr><td>Build/KnowledgePlatform/Neo4j</td><td>release-4.1.0_RC2</td><td><a href="https://github.com/project-sunbird/sunbird-learning-platform.git">https://github.com/project-sunbird/sunbird-learning-platform.git</a></td><td>Generates neo4j plugins</td></tr><tr><td>Build/KnowledgePlatform/SyncTool</td><td>release-4.5.0_RC12</td><td><a href="https://github.com/project-sunbird/sunbird-learning-platform.git">https://github.com/project-sunbird/sunbird-learning-platform.git</a></td><td>Generates a jar to manually sync contents</td></tr><tr><td>Build/DataPipeline/AdhocScripts</td><td>release-4.5.1_RC1</td><td><a href="https://github.com/Sunbird-Ed/sunbird-data-products.git">https://github.com/Sunbird-Ed/sunbird-data-products.git</a></td><td>Generates supporting scripts for reporting</td></tr><tr><td>Build/DataPipeline/AnalyticsCore</td><td>github_release_tag:  release-5.1.2_RC1,<strong>cloud_store_group_id</strong>:org.sunbird,<strong>cloud_store_artifact_id</strong>:cloud-store-sdk_2.12,<strong>cloud_store_version</strong>:1.4.0</td><td><a href="https://github.com/project-sunbird/sunbird-analytics-core.git">https://github.com/project-sunbird/sunbird-analytics-core.git</a></td><td>Generates core libraries for reporting</td></tr><tr><td>Build/DataPipeline/CoreDataProducts</td><td>github_release_tag:  release-5.1.2_RC1,<strong>cloud_store_group_id</strong>:org.sunbird,<strong>cloud_store_artifact_id</strong>:cloud-store-sdk_2.12,<strong>cloud_store_version</strong>:1.4.0</td><td><a href="https://github.com/project-sunbird/sunbird-core-dataproducts.git">https://github.com/project-sunbird/sunbird-core-dataproducts.git</a></td><td>Generates supporting libraries for reporting</td></tr><tr><td>Build/DataPipeline/EdDataProducts</td><td>release-5.0.0_RC2</td><td><a href="https://github.com/Sunbird-Ed/sunbird-data-products.git">https://github.com/Sunbird-Ed/sunbird-data-products.git</a></td><td>Generates supporting libraries for reporting</td></tr><tr><td>Build/DataPipeline/ETLJobs</td><td>release-4.10.5_RC2</td><td><a href="https://github.com/Sunbird-Ed/sunbird-data-products.git">https://github.com/Sunbird-Ed/sunbird-data-products.git</a></td><td>Extract, Transform, Data Loading jobs</td></tr><tr><td>Build/DataPipeline/FlinkPipelineJobs</td><td>release-4.9.0_RC2</td><td><a href="https://github.com/project-sunbird/sunbird-data-pipeline.git">https://github.com/project-sunbird/sunbird-data-pipeline.git</a></td><td>Handles processing of telemetry data</td></tr><tr><td>Build/DataPipeline/Secor</td><td>secor-0.29_RC2</td><td><a href="https://github.com/project-sunbird/secor.git">https://github.com/project-sunbird/secor.git</a></td><td>Handlles backup of telemetry data to Object storage</td></tr><tr><td>Build/Lern/LernDataProducts</td><td>github_release_tag: release-5.3.1_RC1,<strong>cloud_store_group_id</strong>:org.sunbird,<strong>cloud_store_artifact_id</strong>:cloud-store-sdk_2.12,<strong>cloud_store_version</strong>:1.4.6</td><td><a href="https://github.com/Sunbird-Lern/data-products.git">https://github.com/Sunbird-Lern/data-products.git</a></td><td>Lern BB data products</td></tr><tr><td>Build/Lern/LernFlinkJobs</td><td>github_release_tag: release-5.3.1_RC1,<strong>cloud_store_group_id</strong>:org.sunbird,<strong>cloud_store_artifact_id</strong>:cloud-store-sdk_2.12,<strong>cloud_store_version</strong>:1.4.6</td><td><a href="https://github.com/Sunbird-Lern/data-pipeline.git">https://github.com/Sunbird-Lern/data-pipeline.git</a></td><td>Lern BB jobs</td></tr><tr><td>Build/managed-learn/ml-core-service</td><td>release-6.0.0_RC22</td><td><a href="https://github.com/project-sunbird/ml-core-service.git">https://github.com/project-sunbird/ml-core-service.git</a></td><td></td></tr><tr><td>Build/managed-learn/ml-project-service</td><td>release-6.0.0_RC7</td><td><a href="https://github.com/project-sunbird/ml-projects-service.git">https://github.com/project-sunbird/ml-projects-service.git</a></td><td></td></tr><tr><td>Build/managed-learn/ml-report-service</td><td>release-6.0.0_RC7</td><td><a href="https://github.com/project-sunbird/ml-reports-service.git">https://github.com/project-sunbird/ml-reports-service.git</a></td><td></td></tr><tr><td>Build/managed-learn/ml-survey-service</td><td>release-6.0.0_RC4</td><td><a href="https://github.com/project-sunbird/ml-survey-service.git">https://github.com/project-sunbird/ml-survey-service.git</a></td><td></td></tr><tr><td>Build/Sunbird-RC/CertificateApi</td><td>github_release_tag: release-5.1.0<br>dockerhub_image_source: dockerhub/sunbird-rc-certificate-api:v0.0.11</td><td><a href="https://github.com/project-sunbird/sunbird-devops.git">https://github.com/project-sunbird/sunbird-devops.git</a></td><td></td></tr><tr><td>Build/Sunbird-RC/CertificateSign</td><td>github_release_tag: release-5.1.0<br>dockerhub_image_source: dockerhub/sunbird-rc-certificate-signer:v0.0.11</td><td><a href="https://github.com/project-sunbird/sunbird-devops.git">https://github.com/project-sunbird/sunbird-devops.git</a></td><td></td></tr><tr><td>Build/Sunbird-RC/Registry</td><td>github_release_tag: release-5.1.0<br>dockerhub_image_source: dockerhub/sunbird-rc-core:v0.0.13</td><td><a href="https://github.com/project-sunbird/sunbird-devops.git">https://github.com/project-sunbird/sunbird-devops.git</a></td><td></td></tr><tr><td>Build/UCI/Utils</td><td>release-5.1.0</td><td><a href="https://github.com/samagra-comms/utils.git">https://github.com/samagra-comms/utils.git</a></td><td></td></tr><tr><td>Build/UCI/message-rosa</td><td>release-5.1.0</td><td><a href="https://github.com/samagra-comms/message-rosa.git">https://github.com/samagra-comms/message-rosa.git</a></td><td></td></tr><tr><td>Build/UCI/dao</td><td>release-5.1.0</td><td><a href="https://github.com/samagra-comms/dao.git">https://github.com/samagra-comms/dao.git</a></td><td></td></tr><tr><td>Build/UCI/Adapter</td><td>release-5.1.0</td><td><a href="https://github.com/samagra-comms/adapter.git">https://github.com/samagra-comms/adapter.git</a></td><td></td></tr><tr><td>Build/UCI/Inbound</td><td>release-5.1.0</td><td><a href="https://github.com/samagra-comms/inbound.git">https://github.com/samagra-comms/inbound.git</a></td><td></td></tr><tr><td>Build/UCI/odk</td><td>release-4.4.0_RC1</td><td><a href="https://github.com/samagra-comms/odk.git">https://github.com/samagra-comms/odk.git</a></td><td></td></tr><tr><td>Build/UCI/Outbound</td><td>release-5.1.0</td><td><a href="https://github.com/samagra-comms/outbound">https://github.com/samagra-comms/outbound</a></td><td></td></tr><tr><td>Build/UCI/Orchestrator</td><td>release-5.1.0</td><td><a href="https://github.com/samagra-comms/orchestrator.git">https://github.com/samagra-comms/orchestrator.git</a></td><td></td></tr><tr><td>Build/UCI/Transformer</td><td>release-5.1.0</td><td><a href="https://github.com/samagra-comms/transformer.git">https://github.com/samagra-comms/transformer.git</a></td><td></td></tr><tr><td>Build/UCI/UCI</td><td>release-5.0.0_RC3</td><td><a href="https://github.com/samagra-comms/uci-apis.git">https://github.com/samagra-comms/uci-apis.git</a></td><td></td></tr><tr><td>Build/Plugins/CollectionEditor</td><td>release-3.6.0_RC1</td><td><a href="https://github.com/project-sunbird/sunbird-collection-editor.git">https://github.com/project-sunbird/sunbird-collection-editor.git</a></td><td>A bunch of plugins to handle collection editing</td></tr><tr><td>Build/Plugins/ContentEditor</td><td>release-5.2.1_RC3</td><td><a href="https://github.com/project-sunbird/sunbird-content-editor.git">https://github.com/project-sunbird/sunbird-content-editor.git</a></td><td>A bunch of plugins to edit certain types of content</td></tr><tr><td>Build/Plugins/ContentPlayer</td><td>release-6.0.0_RC37</td><td><a href="https://github.com/project-sunbird/sunbird-content-player.git">https://github.com/project-sunbird/sunbird-content-player.git</a></td><td>A bunch of plugins to handle content playback</td></tr><tr><td>Build/Plugins/ContentPlugins</td><td>release-5.2.1_RC3</td><td><a href="https://github.com/project-sunbird/sunbird-content-plugins.git">https://github.com/project-sunbird/sunbird-content-plugins.git</a></td><td>A bunch of base plugins to support the content editors and content player</td></tr><tr><td>Build/Plugins/GenericEditor</td><td>release-5.2.1_RC2</td><td><a href="https://github.com/project-sunbird/sunbird-generic-editor.git">https://github.com/project-sunbird/sunbird-generic-editor.git</a></td><td>A bunch of plugins to edit certain types of content</td></tr></tbody></table>

**Service Provision**

> **Note**:
>
> * Jobs can be run in parallel to speed up execution. The only exception is you should **NOT** run multiple jobs which will provision packages on the same server in parallel

| JENKINS JOB TO RUN                                 | GITHUB TAG                                                                                                                                                                                            | GITHUB REPO                                                                                                                          | COMMENTS                                                                                                                                                                                                                  |
| -------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| OpsAdministration/Core/Bootstrap                   | hosts: env, branch\_or\_tag: release-5.1.0 , tag: bootstrap\_any,node\_exporter                                                                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates the deployer user and installs node exporter and python packages for ansible                                                                                                                                      |
| OpsAdministration/KnowledgePlatform/Bootstrap      | hosts: env, branch\_or\_tag: release-5.1.0, tag: bootstrap\_any,node\_exporter                                                                                                                        | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates the deployer user and installs node exporter and python packages for ansible                                                                                                                                      |
| OpsAdministration/DataPipeline/Bootstrap           | hosts: env, branch\_or\_tag: release-5.1.0, tag: bootstrap\_any,node\_exporter                                                                                                                        | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates the deployer user and installs node exporter and python packages for ansible                                                                                                                                      |
| Provision/Core/ApplicationElasticSearch            | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Elasticsearch used by the applications                                                                                                                                                                           |
| Provision/Core/Cassandra                           | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Cassandra database                                                                                                                                                                                               |
| Provision/Core/CassandraExporter                   | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Cassandra prometheus exporter                                                                                                                                                                                    |
| Provision/Core/ESMapping                           | indices\_name: all, branch\_or\_tag: release-5.1.0, es\_files: indices,mappings,pipelines                                                                                                             | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates Elasticsearch indices and mappings                                                                                                                                                                                |
|                                                    |                                                                                                                                                                                                       |                                                                                                                                      |                                                                                                                                                                                                                           |
| Provision/Core/Keycloak                            | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs java and other pre-requisites for Keycloak service                                                                                                                                                               |
| Provision/Core/LogES                               | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Elasticsearch used to store application and VM logs                                                                                                                                                              |
| Provision/Core/MongodbCluster                      | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Mongo database                                                                                                                                                                                                   |
| Provision/Core/Postgres                            | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Postgres database                                                                                                                                                                                                |
| Provision/Core/PostgresDbUpdate                    | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates Postgres tables, schema and users                                                                                                                                                                                 |
| Provision/Core/Graylog                             | <p>release-5.1.0<br>tag: all</p>                                                                                                                                                                      | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Graylog, MongoDB and OpenJDK                                                                                                                                                                                     |
| OpsAdministration/Core/GraylogMongoImport          | <p>release-5.1.0<br>tag: all</p>                                                                                                                                                                      | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs Graylog dashboards, inputs and other configurations                                                                                                                                                              |
| OpsAdministration/Core/GraylogGeoIP                | <p>release-5.1.0</p><p>graylog_geoip_compressed_file_name: geoip file name in <code>.tar.gz</code> format</p><p>graylog_geoip_file_name: geoip file name within the <code>.tar.gz</code> file<br></p> | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs the Geo IP database on Graylog. The `.tar.gz` file should be uploaded to the `artifacts` storage bucket before running the job. You can download the GeoIP2 City Database in the `.tar.gz` from Maxmind website. |
| Provision/KnowledgePlatform/Learning               | release-5.2.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Install tomcat and other pre-requisites for Learning service                                                                                                                                                              |
| Provision/KnowledgePlatform/Neo4j                  | release-5.2.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Installs Neo4j database                                                                                                                                                                                                   |
| Provision/DataPipeline/AnalyticsGeoLocationDBSetup | release-5.1.0, geoip\_zip\_csv\_file\_name: Enter the maxmind city database zip file name you uploaded to `artifacts` container                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Creates tables and schema in Postgres                                                                                                                                                                                     |
| Provision/DataPipeline/AnalyticsSpark              | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Install Apache Spark and other pre-requisites for reporting                                                                                                                                                               |
| Provision/DataPipeline/Druid                       | release-5.1.0, service: Select All, remote: raw                                                                                                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Installs Druid                                                                                                                                                                                                            |
| Provision/DataPipeline/InfluxDB                    | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Install Influx DB used by monitoring system                                                                                                                                                                               |
| Provision/DataPipeline/Kafka                       | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Installs Kafka                                                                                                                                                                                                            |
| Provision/DataPipeline/KafkaIndexer                | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Install Logstash to read telemetry data from Kafka and index into Log ES                                                                                                                                                  |
| Provision/DataPipeline/Postgres                    | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Installs Postgres database and users                                                                                                                                                                                      |
| Provision/DataPipeline/PostgresDbUpdate            | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Creates Postgres tables, schema and users                                                                                                                                                                                 |
| Provision/DataPipeline/Redis                       | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Install Redis                                                                                                                                                                                                             |
| Provision/DataPipeline/Zookeeper                   | release-5.1.0                                                                                                                                                                                         | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Installs Zookeeper                                                                                                                                                                                                        |

**Artifact Upload**

* Every job in the **Build** directory has a corresponding job in **ArtifactUpload** directory with the same name
* These jobs are auto triggered and usually run without issues after the corresponding job in the build directory succeeds
* The job will fail if your ansible inventory setup is incorrect or incomplete
* If the job has failed, fix the ansible variables issue and rerun the job to upload the artifact / docker image
* Ensure the artifact upload jobs are successful before proceeding

**Service Deploy**

> **Note**:
>
> * We will run the jobs which are a pre-requisite for other jobs first
> * The pre-requisite jobs reside in different folders so we will be jumping across folders
> * Jobs in the **Deploy** directory can be run in parallel and don’t have any restrictions if the code is from same repo unlike the **Build** directory
> * Ensure you don’t run those jobs in parallel which modify the databases (such as cassandra, neo4j etc)



| JENKINS JOB TO RUN                             | GITHUB TAG                                                                          | GITHUB REPO                                                                                                                          | COMMENTS                                                                                                                                                                                                                                                                                                                           |
| ---------------------------------------------- | ----------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Deploy/Kubernetes/BootstrapMinimal             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates namespaces, configmaps and secrets                                                                                                                                                                                                                                                                                         |
| Deploy/DataPipeline/BootstrapMinimal           | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Creates namespaces, configmaps and secrets                                                                                                                                                                                                                                                                                         |
| Deploy/Kubernetes/Monitoring                   | branch\_or\_tag: release-5.1.0, tag: all                                            | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys the monitoring stack which can be accessed via DOMAIN/grafana/ post nginx-public-ingress deployment                                                                                                                                                                                                                        |
| Deploy/Kubernetes/CassandraTrigger             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Installs the Cassandra triggers                                                                                                                                                                                                                                                                                                    |
| Deploy/KnowledgePlatform/CassandraTrigger      | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Installs the Cassandra triggers                                                                                                                                                                                                                                                                                                    |
| Deploy/Kubernetes/CassandraDBUpdate            | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates / Updates Cassandra DB schema                                                                                                                                                                                                                                                                                              |
| Deploy/KnowledgePlatform/CassandraDbUpdate     | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Creates / Updates Cassandra DB schema                                                                                                                                                                                                                                                                                              |
| Deploy/Kubernetes/Cassandra                    | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates / Updates Cassandra DB schema                                                                                                                                                                                                                                                                                              |
| Deploy/Kubernetes/KafkaSetup                   | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates / Updates Kafka Topics                                                                                                                                                                                                                                                                                                     |
| Deploy/DataPipeline/KafkaSetup                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Creates / Updates Kafka Topics                                                                                                                                                                                                                                                                                                     |
| Deploy/KnowledgePlatform/KafkaSetup            | release-5.2.0                                                                       | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Creates / Updates Kafka Topics                                                                                                                                                                                                                                                                                                     |
| Deploy/KnowledgePlatform/Learning              | release-5.2.0                                                                       | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Deploys the Learning service on tomcat                                                                                                                                                                                                                                                                                             |
| Deploy/KnowledgePlatform/Neo4j                 | release-5.2.0                                                                       | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Deploys the Neo4j plugins                                                                                                                                                                                                                                                                                                          |
| Deploy/KnowledgePlatform/Neo4jDefinitionUpdate | release-5.2.0                                                                       | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Creates / Updates the Neo4j database                                                                                                                                                                                                                                                                                               |
| Deploy/KnowledgePlatform/FlinkJobs             | branch\_or\_tag: release-5.4.1\_RC1, job\_names\_to\_deploy: Select All             | [https://github.com/project-sunbird/sunbird-learning-platform.git](https://github.com/project-sunbird/sunbird-learning-platform.git) | Deploys the Flink jobs in Kubernetes cluster                                                                                                                                                                                                                                                                                       |
| Deploy/KnowledgePlatform/InquiryFlinkJob       | inquiry\_release\_tag: release-5.7.0\_RC1, job\_names\_to\_deploy: Select All       | [https://github.com/Sunbird-inQuiry/data-pipeline.git](https://github.com/Sunbird-inQuiry/data-pipeline.git)                         | Deploys the Flink jobs in Kubernetes cluster                                                                                                                                                                                                                                                                                       |
| Deploy/KnowledgePlatform/LoggingFileBeatsVM    | branch\_or\_tag: release-5.1.0, hosts: Select All, tags: default                    | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys filebeat in all the selected VMs                                                                                                                                                                                                                                                                                           |
| Deploy/Kubernetes/nginx-private-ingress        | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | <p>Deploys nginx with a private load balancer </p><p>Note: Before deploying update <code>private_ingressgateway_ip</code> variable in private repo with available ip in kubernetes subnet address range.</p>                                                                                                                       |
| Deploy/Kubernetes/APIManager                   | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Kong, the API gateway                                                                                                                                                                                                                                                                                                      |
| Deploy/Kubernetes/OnboardAPIs                  | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates the APIs in Kong                                                                                                                                                                                                                                                                                                           |
| Deploy/Kubernetes/OnboardConsumers             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | <p>Deploy only after OnboardAPIs.</p><p>Creates the consumers in Kong. Now read the comment mentioned in <strong>Core/Secrets.yml</strong> against the variable <code>core_vault_sunbird_api_auth_token</code></p>                                                                                                                 |
| Deploy/Kubernetes/KongJWTAdminUtil             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Onboards the v2 consumers for mobile, desktop and portal                                                                                                                                                                                                                                                                           |
| Deploy/Kubernetes/Keycloak                     | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Keycloak                                                                                                                                                                                                                                                                                                                   |
| Deploy/Kubernetes/KeycloakRealm                | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates the Sunbird Realm. Now read the comment mentioned in **Core/Secrets.yml** against the variables `core_vault_sunbird_sso_publickey`, `adminutil_refresh_token_public_key_kid`, `adminutil_refresh_token_secret_key`                                                                                                         |
| Deploy/Kubernetes/BootstrapMongodb             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Creates the initial token in Mongo database                                                                                                                                                                                                                                                                                        |
| Deploy/Kubernetes/CertTemplate                 | branch\_or\_tag: release-5.1.0, sunbird\_util\_branch\_or\_tag: release-4.10.0\_RC1 | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Uploads the certificate templates into Object storage                                                                                                                                                                                                                                                                              |
| Deploy/Kubernetes/UploadChatbotConfig          | branch\_or\_tag: release-5.1.0, bot\_repo\_branch: master                           | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Uploads the chatbot configs to Object storage                                                                                                                                                                                                                                                                                      |
| Deploy/Kubernetes/UploadFAQs                   | branch\_or\_tag: release-5.1.0, source\_folder: Select All                          | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Uploads the FAQs to Object storage                                                                                                                                                                                                                                                                                                 |
| Deploy/Kubernetes/UploadSchema                 | branch\_or\_tag: release-5.1.0, kp\_branch\_or\_tag: release-4.9.0\_RC8             | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Uploads the Content schemas to Object storage                                                                                                                                                                                                                                                                                      |
| Deploy/Kubernetes/AdminUtils                   | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Adminutils service                                                                                                                                                                                                                                                                                                         |
| Deploy/Kubernetes/Analytics                    | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Analytics service                                                                                                                                                                                                                                                                                                          |
| Deploy/Kubernetes/APIManagerEcho               | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Echo service                                                                                                                                                                                                                                                                                                               |
| Deploy/Kubernetes/Assessment                   | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Assessment service                                                                                                                                                                                                                                                                                                         |
| Deploy/Kubernetes/Bot                          | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Bot service                                                                                                                                                                                                                                                                                                                |
| Deploy/Kubernetes/Cert                         | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Cert service                                                                                                                                                                                                                                                                                                               |
| Deploy/Kubernetes/CertRegistry                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys CertRegistry service                                                                                                                                                                                                                                                                                                       |
| Deploy/Kubernetes/Content                      | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Content service                                                                                                                                                                                                                                                                                                            |
| Deploy/Kubernetes/Dial                         | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Dial service                                                                                                                                                                                                                                                                                                               |
| Deploy/Kubernetes/Enc                          | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Enc service                                                                                                                                                                                                                                                                                                                |
| Deploy/Kubernetes/Groups                       | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Groups service                                                                                                                                                                                                                                                                                                             |
| Deploy/Kubernetes/KnowledgeMW                  | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys KnowledgeMW service                                                                                                                                                                                                                                                                                                        |
| Deploy/Kubernetes/Learner                      | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Learner service                                                                                                                                                                                                                                                                                                            |
| Deploy/Kubernetes/Lms                          | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Lms service                                                                                                                                                                                                                                                                                                                |
| Deploy/Kubernetes/Notification                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Notification service                                                                                                                                                                                                                                                                                                       |
| Deploy/Kubernetes/Player                       | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Player service                                                                                                                                                                                                                                                                                                             |
| Deploy/Kubernetes/Print                        | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Print service                                                                                                                                                                                                                                                                                                              |
| Deploy/Kubernetes/Report                       | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Report service                                                                                                                                                                                                                                                                                                             |
| Deploy/Kubernetes/Router                       | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Router service                                                                                                                                                                                                                                                                                                             |
| Deploy/Kubernetes/Search                       | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Search service                                                                                                                                                                                                                                                                                                             |
| Deploy/Kubernetes/Taxonomy                     | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Taxonomy service                                                                                                                                                                                                                                                                                                           |
| Deploy/Kubernetes/Telemetry                    | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys Telemetry service                                                                                                                                                                                                                                                                                                          |
| Deploy/Kubernetes/LoggingFileBeatsVM           | branch\_or\_tag: release-5.1.0, hosts: Select All, tags: default                    | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys filebeat in all the selected VMs                                                                                                                                                                                                                                                                                           |
| Deploy/Kubernetes/Logging                      | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Run job twice by choosing the **chartname** as - `filebeat`, `oauth2-proxy`. Deploys filebeats and oauth2 proxy respectively. Graylog can accessed via DOMAIN/graylog/                                                                                                                                                             |
| Deploy/Kubernetes/nginx-public-ingress         | release-5.2.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | <p>Deploys the nginx web server. Now you can open visit your domain  </p><p></p><p>Note: Add new variable <strong>mobile_deeplink_url</strong> <a href="https://project-sunbird.atlassian.net/wiki/spaces/SBDES/pages/3276865567/Deep+link+support+in+Android+12+devices">Refer documentation to add assetlinks.json file</a> </p> |
| Deploy/Kubernetes/Nodebb                       | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys NodeBB service. Now read the comment mentioned in **Core/Secrets.yml** against the variable `discussionsmw_nodebb_authorization_token`                                                                                                                                                                                     |
| Deploy/Kubernetes/DiscussionsMW                | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys DiscussionsMW service                                                                                                                                                                                                                                                                                                      |
| Deploy/Lern/LernDataProducts                   | release-5.3.1\_RC1                                                                  | [https://github.com/Sunbird-Lern/data-products](https://github.com/Sunbird-Lern/data-products)                                       | <p>Now define the variable mentioned in <strong>KnowledgePlatform/common.yml</strong> </p><p><a data-footnote-ref href="#user-content-fn-1"><em>druid_storage_type , cloud_storage_report_verfication_bucketname,dp_storage_endpoint_config</em></a></p>                                                                           |
| Deploy/Lern/LernFlinkJobs                      | release-5.3.1\_RC1                                                                  | [https://github.com/Sunbird-Lern/data-pipeline.git](https://github.com/Sunbird-Lern/data-pipeline.git)                               | relational-cache-updater, activity-aggregate-updater jobs need to be deployed                                                                                                                                                                                                                                                      |
| Deploy/managed-learn/gotenberg                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/managed-learn/ml-analytics-service      | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | ml\_analytics\_version: release-6.0.0\_RC14                                                                                                                                                                                                                                                                                        |
| Deploy/managed-learn/ml-core-service           | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/managed-learn/ml-projects-service       | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/managed-learn/ml-reports-service        | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/managed-learn/ml-survey-service         | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/Sunbird-RC/CertificateApi               | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/Sunbird-RC/CertificateSign              | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/Sunbird-RC/Registry                     | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/Sunbird-RC/UploadRCSchema               | branch\_or\_tag:release-5.1.0, source\_folder: sunbird-RC                           | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/UCI/fusionauth                          | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/UCI/gql                                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/UCI/Inbound                             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/UCI/odk                                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/UCI/Orchestrator                        | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/UCI/Outbound                            | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/UCI/Transformer                         | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/UCI/UCI                                 | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       |                                                                                                                                                                                                                                                                                                                                    |
| Deploy/Plugins/CollectionEditor                | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys CollectionEditor files to Object storage                                                                                                                                                                                                                                                                                   |
| Deploy/Plugins/ContentEditor                   | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys ContentEditor files to Object storage                                                                                                                                                                                                                                                                                      |
| Deploy/Plugins/ContentPlayer                   | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys ContentPlayer files to Object storage                                                                                                                                                                                                                                                                                      |
| Deploy/Plugins/ContentPlugins                  | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys ContentPlugins files to Object storage                                                                                                                                                                                                                                                                                     |
| Deploy/Plugins/GenericEditor                   | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys GenericEditor files to Object storage                                                                                                                                                                                                                                                                                      |
| Deploy/DataPipeline/AdhocScripts               | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys AdHoc scripts in Spark VM                                                                                                                                                                                                                                                                                                  |
| Deploy/DataPipeline/AnalyticsCore              | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys jars in Spark VM                                                                                                                                                                                                                                                                                                           |
| Deploy/DataPipeline/CoreDataProducts           | release-6.0.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys jars in Spark VM                                                                                                                                                                                                                                                                                                           |
| Deploy/DataPipeline/DruidIngestion             | branch\_or\_tag: release-5.1.0, ingestion\_task\_names: Select All                  | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys and starts Druid ingestion tasks. **This job will be updated in a couple of days. Please wait until then**                                                                                                                                                                                                                 |
| Deploy/DataPipeline/EdDataProducts             | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys jars in Spark VM                                                                                                                                                                                                                                                                                                           |
| Deploy/DataPipeline/ETLJobs                    | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys ETL scripts in Spark VM                                                                                                                                                                                                                                                                                                    |
| Deploy/DataPipeline/ETLDruidContentIndexer     | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys ETLDruidContentIndexer                                                                                                                                                                                                                                                                                                     |
| Deploy/DataPipeline/ETLUserCacheIndexer        | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys ETLUserCacheIndexer                                                                                                                                                                                                                                                                                                        |
| Deploy/DataPipeline/Secor                      | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys Secor Statefulsets in Kubernetes cluster                                                                                                                                                                                                                                                                                   |
| Deploy/DataPipeline/FlinkPipelineJobs          | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys Flink jobs Kubernetes cluster                                                                                                                                                                                                                                                                                              |
| Deploy/DataPipeline/GraphitePrometheusExporter | release-5.1.0                                                                       | [https://github.com/project-sunbird/sunbird-data-pipeline.git](https://github.com/project-sunbird/sunbird-data-pipeline.git)         | Deploys graphite prometheus exporter in Druid VM                                                                                                                                                                                                                                                                                   |
| Deploy/DataPipeline/LoggingFileBeatsVM         | branch\_or\_tag: release-5.1.0, hosts: Select All, tags: default                    | [https://github.com/project-sunbird/sunbird-devops.git](https://github.com/project-sunbird/sunbird-devops.git)                       | Deploys filebeat in all the selected VMs                                                                                                                                                                                                                                                                                           |



[^1]: 
